fix: Stop SearchPanes showing horizontal scroll bars
Jira Issue DD-1729

Sync to source repo @7bd9e72734b0ee44a5bd0a96c84cd7035bb09b40

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -46,6 +46,11 @@ div.dtsp-topRow button.dtsp-searchIcon {
   background-size: 12px;
 }
 
+div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane table thead th,
+div.dtsp-panesContainer div.dtsp-searchPanes div.dtsp-searchPane table thead td {
+  width: 100% !important;
+}
+
 div.dt-button-collection {
   z-index: 2002;
 }
